# ridge_significance

./: .cproject  .gitignore  .project  CHANGELOG.md  README.md  git_update  main.c  out  pyproject.toml  ridge.c  ridge.h  run_all  setup.py  test.py  util.c  util.h
Release/: makefile  objects.mk  subdir.mk
ridge_significance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: regression.py
tests/data/: output.permutation.beta.npy  output.permutation.pvalue.npy  output.permutation.se.npy  output.permutation.zscore.npy  output.t.beta.npy  output.t.pvalue.npy  output.t.se.npy  output.t.zscore.npy
